--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -100,10 +100,9 @@
 .react-autoql-checkbox--switch__input {
   width: 36px;
   height: 20px;
-  // border: 2px solid #5a5358;
   border-radius: 16px;
-  background: #cccccc;
-  border: 1px solid #cccccc;
+  background: var(--react-autoql-checkbox-background-color-tertiary);
+  border: 1px solid var(--react-autoql-checkbox-background-color-tertiary);
 }
 .react-autoql-checkbox--switch__input::before {
   top: 2px;
@@ -127,4 +126,18 @@
 .react-autoql-checkbox-label {
   padding-left: 6px;
   line-height: 100%;
+}
+
+.react-autoql-modal-container
+  .react-autoql-checkbox__input:not(.react-autoql-checkbox--switch__input),
+.react-autoql-drawer
+  .react-autoql-checkbox__input:not(.react-autoql-checkbox--switch__input) {
+  border-color: var(--react-autoql-checkbox-accent-color);
+}
+
+.react-autoql-modal-container
+  .react-autoql-checkbox__input::before:not(.react-autoql-checkbox--switch__input),
+.react-autoql-drawer
+  .react-autoql-checkbox__input::before:not(.react-autoql-checkbox--switch__input) {
+  background: var(--react-autoql-checkbox-accent-color);
 }
