--- a/src/components/Notifications/Group/Group.scss
+++ b/src/components/Notifications/Group/Group.scss
@@ -1,5 +1,6 @@
 .notification-read-only-group {
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid
+    var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.1));
   border-radius: 4px;
   padding: 10px;
 }
@@ -10,7 +11,7 @@
   width: 35px;
   border-radius: 20px;
   background: var(--react-autoql-messenger-accent-color, #26a7df);
-  color: white;
+  color: inherit;
   line-height: 38px;
   text-align: center;
   font-size: 20px;
@@ -41,7 +42,8 @@
     position: absolute;
     color: rgba(0, 0, 0, 0.4);
     left: -35px;
-    border-left: 1px dashed rgba(0, 0, 0, 0.15);
+    border-left: 1px dashed
+      var(--react-autoql-modal-border-color, rgba(0, 0, 0, 0.15));
   }
 
   .notification-and-or-text {
@@ -62,7 +64,7 @@
     padding-top: 55px;
     padding-bottom: 20px;
 
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--react-autoql-modal-border-color, rgba(0, 0, 0, 0.1));
     border-radius: 4px;
 
     .react-autoql-notification-group-add-btn,
@@ -74,8 +76,11 @@
       border: 1px solid;
       line-height: 22px;
       text-align: center;
-      background: white;
-      color: rgba(0, 0, 0, 0.2);
+      background: var(--react-autoql-modal-background-color-primary, white);
+      color: var(
+        --react-autoql-modal-text-color-placeholder,
+        rgba(0, 0, 0, 0.2)
+      );
       transition: all 0.3s ease;
       cursor: pointer;
 
@@ -85,7 +90,7 @@
       }
 
       &:hover {
-        color: rgba(0, 0, 0, 0.6);
+        color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.6));
       }
     }
 
@@ -104,11 +109,9 @@
       position: absolute;
       margin: 0 auto;
       padding: 0 10px;
-      background: white;
-      // text-align: left;
+      background: inherit;
       top: 16px;
-      // left: calc(50% - 126px);
-      color: rgba(0, 0, 0, 0.5);
+      color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.5));
     }
 
     .notification-rule-btn-container {
@@ -123,7 +126,7 @@
         height: 42px;
         line-height: 29px;
         margin-right: 0 !important;
-        background: white;
+        background: inherit;
         overflow: hidden;
       }
     }
@@ -137,13 +140,15 @@
       line-height: 20px;
       text-align: center;
       font-size: 14px;
-      color: rgba(0, 0, 0, 0.2);
+      color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.2));
+      opacity: 0.5;
       border: 1px solid;
       transition: all 0.2s ease;
       cursor: pointer;
 
       &:hover {
-        color: rgba(0, 0, 0, 0.5);
+        opacity: 1;
+        color: var(--react-autoql-modal-accent-color);
       }
     }
   }
