--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -1,20 +1,34 @@
+.notification-list-loading-container {
+  text-align: center;
+  padding-top: 100px;
+  color: var(--react-autoql-notifications-text-color-primary);
+  height: 100%;
+  overflow: hidden;
+  background: var(--react-autoql-notifications-background-color-secondary);
+}
+
 .react-autoql-notification-list-container {
   height: 100%;
   padding: 20px;
   overflow-y: auto;
+  background: var(--react-autoql-notifications-background-color-secondary);
 }
 
 .react-autoql-notification-dismiss-all {
   text-align: right;
   margin-bottom: 12px;
   padding-right: 10px;
-  color: rgba(0, 0, 0, 0.4);
+  color: var(
+    --react-autoql-notifications-text-color-primary,
+    rgba(0, 0, 0, 0.4)
+  );
   transition: color 0.1s ease;
 
   span {
+    opacity: 0.8;
     cursor: pointer;
     &:hover {
-      color: rgba(0, 0, 0, 0.6);
+      opacity: 1;
     }
   }
 }
