--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -24,11 +24,14 @@
     width: 100%;
     padding: 10px;
     resize: none;
+    background: var(--react-autoql-modal-background-color-secondary);
   }
 
   .copy-sql-btn {
     color: var(--react-autoql-options-toolbar-text-color);
-    background-color: var(--react-autoql-options-toolbar-background-color);
+    background-color: var(
+      --react-autoql-options-toolbar-background-color-primary
+    );
     position: absolute;
     top: 3px;
     right: 0;
