update theme css if themeConfig prop changed

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -208,7 +208,7 @@
   flex-grow: 0;
 
   .dashboard-tile-title {
-    color: var(--react-autoql-dashboard-accent-color, rgb(72, 105, 142));
+    color: var(--react-autoql-messenger-accent-color, #26a7df);
   }
 }
 
