--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -6,17 +6,14 @@
 
   position: relative;
   overflow: hidden;
-  background: var(--react-autoql-notifications-background-color-primary, #fff);
+  background: var(--react-autoql-background-color-primary, #fff);
   border-radius: 4px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
 
   margin-bottom: 8px;
 
-  color: var(
-    --react-autoql-notifications-text-color-primary,
-    rgba(0, 0, 0, 0.6)
-  );
-  font-family: var(--react-autoql-notifications-font-family), sans-serif;
+  color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.6));
+  font-family: var(--react-autoql-font-family), sans-serif;
 
   transition: all 1s ease;
   transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
@@ -47,7 +44,7 @@
 
   &.expanded .react-autoql-notification-list-item-header {
     border-bottom: 1px solid
-      var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.04));
+      var(--react-autoql-border-color, rgba(0, 0, 0, 0.04));
   }
 
   .react-autoql-notification-details {
@@ -59,10 +56,7 @@
 
   &:hover {
     &:not(.expanded) {
-      background-color: var(
-        --react-autoql-notifications-hover-color,
-        rgba(0, 0, 0, 0.01)
-      );
+      background-color: var(--react-autoql-hover-color, rgba(0, 0, 0, 0.01));
     }
 
     .react-autoql-notification-delete-icon {
@@ -72,12 +66,12 @@
 
   &.triggered {
     .react-autoql-notification-display-name {
-      color: var(--react-autoql-notifications-accent-color, #26a7df) !important;
+      color: var(--react-autoql-accent-color, #26a7df) !important;
     }
 
     .react-autoql-notification-dismiss-btn {
       margin-top: 3px;
-      color: var(--react-autoql-notifications-accent-color, #26a7df);
+      color: var(--react-autoql-accent-color, #26a7df);
     }
 
     .react-autoql-notification-alert-strip {
@@ -104,8 +98,7 @@
 
     text-align: center;
     padding: 8px;
-    border-top: 1px solid
-      var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.05));
+    border-top: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
 
     .notification-deleted-text {
       line-height: 40px;
@@ -115,10 +108,7 @@
   }
 
   .react-autoql-notification-description {
-    color: var(
-      --react-autoql-notifications-text-color-primary,
-      rgba(0, 0, 0, 0.6)
-    );
+    color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.6));
     opacity: 0.8;
     font-size: 14px;
   }
@@ -139,7 +129,7 @@
     opacity: 0.9;
     font-weight: 600;
     border-bottom: 1px solid
-      var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.1));
+      var(--react-autoql-border-color, rgba(0, 0, 0, 0.1));
     text-align: center;
     margin: 0 10px;
     padding-top: 20px;
@@ -159,7 +149,7 @@
       padding-top: 0;
       opacity: 0.9;
       border-left: 1px solid
-        var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.05));
+        var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
     }
   }
 
@@ -179,7 +169,7 @@
       padding: 0px 20px 10px 20px;
     }
 
-    .react-autoql-table-container {
+    .react-autoql-container {
       width: 100%;
       padding: 0 10px;
     }
@@ -194,7 +184,7 @@
     line-height: 22px;
     font-size: 12px;
     text-align: right;
-    color: var(--react-autoql-notifications-text-color-primary);
+    color: var(--react-autoql-text-color-primary);
     opacity: 0.5;
     padding: 8px 20px;
 
@@ -219,10 +209,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: var(
-        --react-autoql-notifications-background-color-secondary,
-        #ececec
-      );
+      background-color: var(--react-autoql-background-color-secondary, #ececec);
     }
   }
 
@@ -244,10 +231,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: var(
-        --react-autoql-notifications-background-color-secondary,
-        #ececec
-      );
+      background-color: var(--react-autoql-background-color-secondary, #ececec);
     }
   }
 
@@ -255,12 +239,9 @@
     position: absolute;
     top: -7px;
     left: -7px;
-    color: var(--react-autoql-notifications-accent-color, #26a7df);
+    color: var(--react-autoql-accent-color, #26a7df);
     line-height: 10px;
-    background: var(
-      --react-autoql-notifications-background-color-primary,
-      #fff
-    );
+    background: var(--react-autoql-background-color-primary, #fff);
     border-radius: 10px;
     font-size: 17px;
   }
@@ -273,7 +254,7 @@
     top: 0;
     width: 4px;
 
-    background: var(--react-autoql-notifications-accent-color, #26a7df);
+    background: var(--react-autoql-accent-color, #26a7df);
 
     transition-property: opacity;
     transition-duration: 0.2s;
@@ -283,8 +264,7 @@
   .react-autoql-notification-viz-switcher {
     flex: 0 0 50px;
     padding: 10px;
-    border-left: 1px solid
-      var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.05));
+    border-left: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
   }
 
   .react-autoql-notification-img-container {
@@ -297,7 +277,7 @@
       line-height: 45px;
       font-size: 22px;
       color: white;
-      background-color: var(--react-autoql-notifications-accent-color, #26a7df);
+      background-color: var(--react-autoql-accent-color, #26a7df);
       text-align: center;
       margin-top: 13px;
       margin-right: 17px;
@@ -312,10 +292,7 @@
 
     .react-autoql-notification-display-name {
       font-size: 18px;
-      color: var(
-        --react-autoql-notifications-text-color-primary,
-        rgba(0, 0, 0, 0.7)
-      );
+      color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.7));
     }
     .react-autoql-notification-timestamp {
       font-size: 12px;
