--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -13,7 +13,7 @@
   .notification-frequency-select {
     margin-left: 8px;
   }
-  .frequency-repeat-checkbox .react-autoql-label {
+  .frequency-repeat-checkbox .react-autoql-checkbox-label {
     line-height: 33px;
   }
   .frequency-repeat-follow-text {
