--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -16,9 +16,9 @@
   transform: scale(0);
   transition: all 0.2s ease-in-out;
 
-  color: var(--react-autoql-text-color-primary);
-  border: 1px solid var(--react-autoql-border-color) !important;
-  background: var(--react-autoql-background-color-primary) !important;
+  color: var(--react-autoql-modal-text-color-primary);
+  border: 1px solid var(--react-autoql-modal-border-color) !important;
+  background: var(--react-autoql-modal-background-color-primary) !important;
   box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
   padding: 0 !important;
 
@@ -29,12 +29,12 @@
   input.react-autoql-input,
   textarea.react-autoql-input,
   textarea {
-    border-color: var(--react-autoql-border-color);
-    color: var(--react-autoql-text-color-primary);
-    background: var(--react-autoql-background-color-primary, white);
+    border-color: var(--react-autoql-modal-border-color);
+    color: var(--react-autoql-modal-text-color-primary);
+    background: var(--react-autoql-modal-background-color-primary, white);
 
     &::placeholder {
-      color: var(--react-autoql-text-color-placeholder);
+      color: var(--react-autoql-modal-text-color-placeholder);
     }
   }
 }
@@ -49,7 +49,8 @@
   position: relative;
   text-align: center;
   flex: 0 0 52px;
-  border-bottom: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
+  border-bottom: 1px solid
+    var(--react-autoql-modal-border-color, rgba(0, 0, 0, 0.05));
   padding: 14px 60px;
   font-size: 16px;
 }
@@ -62,7 +63,7 @@
 }
 .react-autoql-modal-body {
   h3 {
-    color: var(--react-autoql-text-color-primary);
+    color: var(--react-autoql-modal-text-color-primary);
   }
   display: flex;
   flex-direction: column;
