--- a/src/components/Notifications/Group/Group.scss
+++ b/src/components/Notifications/Group/Group.scss
@@ -1,5 +1,6 @@
 .notification-read-only-group {
-  border: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.1));
+  border: 1px solid
+    var(--react-autoql-notifications-border-color, rgba(0, 0, 0, 0.1));
   border-radius: 4px;
   padding: 10px;
 }
@@ -9,7 +10,7 @@
   height: 35px;
   width: 35px;
   border-radius: 20px;
-  background: var(--react-autoql-accent-color, #26a7df);
+  background: var(--react-autoql-messenger-accent-color, #26a7df);
   color: inherit;
   line-height: 38px;
   text-align: center;
@@ -42,7 +43,7 @@
     color: rgba(0, 0, 0, 0.4);
     left: -35px;
     border-left: 1px dashed
-      var(--react-autoql-border-color, rgba(0, 0, 0, 0.15));
+      var(--react-autoql-modal-border-color, rgba(0, 0, 0, 0.15));
   }
 
   .notification-and-or-text {
@@ -63,7 +64,7 @@
     padding-top: 55px;
     padding-bottom: 20px;
 
-    border: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.1));
+    border: 1px solid var(--react-autoql-modal-border-color, rgba(0, 0, 0, 0.1));
     border-radius: 4px;
 
     .react-autoql-notification-group-add-btn,
@@ -75,8 +76,11 @@
       border: 1px solid;
       line-height: 22px;
       text-align: center;
-      background: var(--react-autoql-background-color-primary, white);
-      color: var(--react-autoql-text-color-placeholder, rgba(0, 0, 0, 0.2));
+      background: var(--react-autoql-modal-background-color-primary, white);
+      color: var(
+        --react-autoql-modal-text-color-placeholder,
+        rgba(0, 0, 0, 0.2)
+      );
       transition: all 0.3s ease;
       cursor: pointer;
 
@@ -86,7 +90,7 @@
       }
 
       &:hover {
-        color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.6));
+        color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.6));
       }
     }
 
@@ -107,7 +111,7 @@
       padding: 0 10px;
       background: inherit;
       top: 16px;
-      color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.5));
+      color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.5));
     }
 
     .notification-rule-btn-container {
@@ -136,7 +140,7 @@
       line-height: 20px;
       text-align: center;
       font-size: 14px;
-      color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.2));
+      color: var(--react-autoql-modal-text-color-primary, rgba(0, 0, 0, 0.2));
       opacity: 0.5;
       border: 1px solid;
       transition: all 0.2s ease;
@@ -144,7 +148,7 @@
 
       &:hover {
         opacity: 1;
-        color: var(--react-autoql-accent-color);
+        color: var(--react-autoql-modal-accent-color);
       }
     }
   }
