final css var fixes

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -185,7 +185,7 @@
 
   cursor: default;
 
-  .react-autoql-container {
+  .react-autoql-table-container {
     padding: 20px;
     padding-top: 15px;
     width: 100%;
