--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -169,7 +169,7 @@
       padding: 0px 20px 10px 20px;
     }
 
-    .react-autoql-container {
+    .react-autoql-table-container {
       width: 100%;
       padding: 0 10px;
     }
