--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -27,7 +27,7 @@
 // Type
 .react-autoql-btn.default {
   color: inherit;
-  border: 1px solid #00000026;
+  border: 1px solid var(--react-autoql-border-color);
   background: inherit;
   &:hover {
     border-color: var(--react-autoql-accent-color);
